--- a/src/index.css
+++ b/src/index.css
@@ -3,23 +3,23 @@
 @tailwind utilities;
 @import-normalize; /* bring in normalize.css styles */
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   @apply bg-slate-800;
-  /* color: rgb(var(--foreground-rgb)); */
+  color: rgb(var(--foreground-rgb));
   /* background: linear-gradient(
       to bottom,
       transparent,
@@ -27,9 +27,9 @@ body {
     )
     rgb(var(--background-start-rgb)); */
 }
-
+/* 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
